@@ -160,11 +160,14 @@ class TestRakeTaskWithArguments < Rake::TestCase
   end
 
   def test_values_at
-    t = task(:pre, [:a, :b, :c]) { |t, args|
+    t = task(:pre, [:a, :b, :c]) { |task, args|
       a, b, c = args.values_at(:a, :b, :c)
       assert_equal %w[1 2 3], [a, b, c]
     }
+
     t.invoke(*%w[1 2 3])
+
+    # HACK no assertions
   end
 end
 
